--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -1,5 +1,66 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html, body, #root {
+	height: 100%;
+	margin: 0;
+}
+
+.app-container {
+	margin: auto;
+	height: 90%;
+	width: 90%;
+}
+
+.map-container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: lightgrey;
+	/* background-image: url('../img/dotaminimap_7.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	*/
+	z-index: -100;
+}
+
+.center-container {
+	text-align: center;
+	height: 70%;
+}
+
+/* Left Sidebar */
+
+.left-sidebar, .right-sidebar {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	height: 100%;
+	width: 305px;
+}
+
+.left-sidebar {
+	float: left;
+}
+
+.right-sidebar {
+	float: right;
+}
+
+.map-selection-container, .hero-selection-container {
+	border: 1px solid black;
+	height: 100px;
+	width: 300px;
+}
+
+.event-data-container, .heatmap-container, .label-container {
+	border: 1px solid black;
+	height: 350px;
+	width: 300px;
+}
+
+.timeline-container {
+	text-align: center;
+	margin: auto;
+	width: 100%;
+	height: 300px;
+	border: 1px solid black;
 }
