--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -133,8 +133,8 @@ h3 {
 	display: inline-block;
 	float: right;
 	text-align: center;
-	width: 75%;
-	height: 300px;
+	/* width: 75%;
+	height: 301px; */
 	border: 1px solid black;
 	background-color: var(--filler);
 }
