--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -132,11 +132,28 @@ h3 {
 .timeline-container {
 	display: inline-block;
 	float: right;
-	text-align: center;
+	/* text-align: center; */
 	/* width: 75%;
 	height: 301px; */
+	position: relative;
 	border: 1px solid black;
-	background-color: var(--filler);
+	background-color: white;
+}
+
+.timeline-svg-axes {
+	position: absolute;
+	background-color: grey;
+}
+
+.timeline-svg-scatter {
+	position: relative;
+	float: right;
+	background-color: lightgrey;
+}
+
+.x-axis {
+	position: absolute;
+	top: 100px;
 }
 
 .event-select-container {
