--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -89,12 +89,21 @@ h3 {
 	justify-content: center;
 }
 
-.unit-option, .group-option, .event-option {
+.unit-option, .group-option {
 	border: 1px solid black;
 	display: inline-block;
 	margin: .2rem;
 	padding: .1rem;
 	cursor: pointer;
+}
+
+.event-option {
+	font-size: .5rem;
+	border: 1px solid black;
+	margin: 0;
+	padding: 0;
+	width: 75px;
+	float: right;
 }
 
 .unit-option:hover, .group-option:hover, .event-option:hover {
@@ -121,7 +130,7 @@ h3 {
 .event-select-container {
 	float: left;
 	width: 12%;
-	height: 300px;
+	height: 400px;
 	background-color: grey;
 	display: flex;
 	flex-direction: column;
@@ -137,7 +146,7 @@ h3 {
 	border: solid black 1px;
 	display: inline;
 	float: left;
-	font-size: .4rem;
+	font-size: .7rem;
 }
 
 .event-label {
@@ -158,7 +167,7 @@ h3 {
 .timeline-chart {
 	float: right;
 	width: 88%;
-	height: 300px;
+	height: 400px;
 	background-color: lightgrey;
 }
 
