--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -20,15 +20,13 @@ h3 {
 }
 
 .center-container {
-	height: 800px;
 	display: flex;
 	margin: 1rem 0;
 }
 
 .map-container {
-	width: 800px;
-	height: 800px;
-	margin: auto;
+	/* margin: auto; */
+	margin: 0 2rem;
 	border: 1px solid black;
 	background-color: rgb(236, 236, 236);
 }
@@ -77,10 +75,18 @@ h3 {
 	text-align: center;
 }
 
-.map-select-container, .game-select-container, .select-container {
+.match-select-container, .game-select-container, .select-container {
 	border: 1px solid black;
 	width: 300px;
 	background-color: var(--filler);
+}
+
+.match-select-container {
+	height: 100px;
+}
+
+.select-container {
+	height: 300px;
 }
 
 .unit-select, .group-select-container {
@@ -95,14 +101,6 @@ h3 {
 	margin: .2rem;
 	padding: .1rem;
 	cursor: pointer;
-}
-
-.group-option:hover, .event-option:hover, .solo-button:hover {
-	background-color: green;
-}
-
-.group-option-active, .event-option-active, .solo-button-active {
-	background-color: green;
 }
 
 .event-data-container, .heatmap-container, .label-container {
@@ -141,8 +139,9 @@ h3 {
 	display: inline-block;
 	font-size: .5rem;
 	border: 1px solid black;
-	width: 120px;
+	width: 150px;
 	cursor: pointer;
+	padding: .2rem;
 }
 
 .solo-button {
