--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -188,6 +188,7 @@ h3 {
 .group-option-container {
 	height: 150px;
 	margin-bottom: 2rem;
+	border: black solid 1px;
 }
 
 .unit-option, .group-option {
@@ -201,7 +202,7 @@ h3 {
 
 .group-option {
 	width: 100px;
-	height: 100%;
+	height: 138px;
 	line-height: 150px;
 	float: left;
 }
@@ -216,13 +217,15 @@ h3 {
 .timeline-container {
 	display: inline-block;
 	width: 100%;
+	min-width: 1200px;
+	max-width: 1400px;
 	border: black 1px solid;
 }
 
 .event-select-container {
 	float: left;
 	width: 12%;
-	height: 400px;
+	height: 300px;
 	min-width: 130px;
 	background-color: grey;
 	display: flex;
@@ -242,7 +245,7 @@ h3 {
 	display: inline-block;
 	font-size: .5rem;
 	border: 1px solid black;
-	width: 170px;
+	width: 120px;
 	cursor: pointer;
 	padding: .2rem;
 }
@@ -269,7 +272,7 @@ h3 {
 .timeline-chart {
 	float: right;
 	width: 88%;
-	height: 400px;
+	height: 300px;
 	background-color: lightgrey;
 }
 
