--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -20,17 +20,19 @@ h3 {
 .app-container {
 	margin: auto;
 	height: 90%;
-	width: 90%;
+	width: 80%;
 }
 
 .center-container {
 	display: flex;
-	margin: 1rem 0;
+	flex-direction: row;
+	justify-content: space-between;
+	min-width: 1250px;
+	max-width: 1400px;
+	margin: 1rem auto;
 }
 
 .map-container {
-	/* margin: auto; */
-	margin: 0 2rem;
 	border: 1px solid black;
 	background-color: rgb(236, 236, 236);
 }
@@ -100,8 +102,7 @@ h3 {
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
-	height: 100%;
-	width: 305px;
+	height: 600px;
 }
 
 .left-sidebar {
@@ -212,23 +213,24 @@ h3 {
 
 .event-data-container, .heatmap-container, .label-container {
 	border: 1px solid black;
-	height: 350px;
+	height: 280px;
 	width: 300px;
 	background-color: var(--filler);
 }
 
 .timeline-container {
-	display: inline-block;
-	width: 100%;
-	min-width: 1200px;
+	/* display: inline-block; */
+	/* width: 100%; */
+	min-width: 1250px;
 	max-width: 1400px;
 	border: black 1px solid;
+	height: 250px;
+	margin: auto;
 }
 
 .event-select-container {
 	float: left;
 	width: 12%;
-	height: 300px;
 	min-width: 130px;
 	background-color: grey;
 	display: flex;
@@ -275,15 +277,5 @@ h3 {
 .timeline-chart {
 	float: right;
 	width: 88%;
-	height: 300px;
 	background-color: lightgrey;
-}
-
-.event-select-container-backup {
-	display: inline-block;
-	float: left;
-	text-align: center;
-	height: 300px;
-	border: 1px solid black;
-	background-color: var(--filler);
 }
