--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -211,7 +211,7 @@ h3 {
 	float: left;
 }
 
-.event-data-container, .heatmap-container, .label-container {
+.event-data-container, .heatmap-container, .label-container, .tooltipsidebar-container {
 	border: 1px solid black;
 	height: 280px;
 	width: 300px;
