--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -35,6 +35,7 @@ h3 {
 .map-container {
 	border: 1px solid black;
 	background-color: rgb(236, 236, 236);
+	position: relative;
 }
 
 .loading-icon-container {
@@ -110,6 +111,9 @@ h3 {
 }
 
 .right-sidebar {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
 	float: right;
 }
 
@@ -145,21 +149,20 @@ h3 {
 
 .map-controls {
 	position: absolute;
-	top: 20px;
-	width: 200px;
-	height: 30px;
+	top: 3px;
+	left: 3px;
 	background-color: rgba(250, 250, 250, .3);
 	border: 1px solid black;
 	padding: .2rem;
 }
 
-.map-center {
-	margin: auto;
+.map-center-button {
 	width: 60px;
 	border: black solid 1px;
 	background-color: grey;
 	text-align: center;
 	padding: .2rem;
+	font-size: .8rem;
 	cursor: pointer;
 }
 
@@ -177,7 +180,7 @@ h3 {
 .match-select-container {
 	height: 100px;
 	text-align: center;
-	margin-bottom: 3rem;
+	margin-bottom: 2rem;
 }
 
 #map-select {
@@ -234,7 +237,7 @@ h3 {
 
 .event-data-container, .heatmap-container, .label-container, .tooltipsidebar-container {
 	border: 1px solid black;
-	height: 280px;
+	height: 290px;
 	width: 300px;
 	background-color: var(--filler);
 }
