map selection updates on event selection

--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -88,7 +88,7 @@ h3 {
 .tooltip-element-wrapper {
 	padding: .3rem;
 	width: 250px;
-	font-size: 1rem;
+	font-size: .9rem;
 }
 
 .tooltip-element-key {
@@ -138,6 +138,7 @@ h3 {
 	top: -22px;
 	left: -1px;
 	border: 1px black solid;
+	cursor: pointer;
 }
 
 .brush-button {
