--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -36,6 +36,8 @@ h3 {
 	border: 1px solid black;
 	background-color: rgb(236, 236, 236);
 	position: relative;
+	/* position: absolute; */
+	/* z-index: -100; */
 }
 
 .loading-icon-container {
@@ -146,6 +148,10 @@ h3 {
 	font-weight: 700;
 	text-align: center;
 	padding: .2rem;
+}
+
+.map-svg {
+	background-size: 1000px;
 }
 
 .map-controls {
