--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -36,12 +36,12 @@ h3 {
 	border: 1px solid black;
 	background-color: rgb(236, 236, 236);
 	position: absolute;
-	left: 40%;
+	left: 25%;
 }
 
-.xAxis {
+/* .xAxis {
 	color: white;
-}
+} */
 
 .loading-icon-container {
 	position: absolute;
