--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -20,15 +20,15 @@ h3 {
 .app-container {
 	position: relative;
 	height: 100%;
-	width: 95%;
-	margin: auto;
+	width: 100%;
 }
 
 .map-container {
 	border: 1px solid black;
 	background-color: rgb(236, 236, 236);
-	position: absolute;
-	left: 35%;
+	position: relative;
+	/* width: 100%;
+	height: 100%; */
 }
 
 /* .xAxis {
@@ -99,6 +99,8 @@ h3 {
 .left-sidebar, .right-sidebar {
 	position: absolute;
 	height: 600px;
+	z-index: 100;
+	top: 0;
 }
 
 .right-sidebar {
