--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -20,6 +20,7 @@ h3 {
 
 .app-container {
 	position: relative;
+	overflow-x: hidden;
 }
 
 .map-container {
@@ -178,9 +179,6 @@ h3 {
 
 #map-select {
 	width: 200px;
-	/* -webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none; */
 }
 
 .tooltipsidebar-inner-container {
