--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -374,6 +374,16 @@ h3 {
     background-color: lightgrey;
 }
 
+.brush-svg-div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.resize {
+    cursor: ew-resize;
+}
+
 .global-timeline-container {
     height: 60px;
     border: 1px solid black;
