--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -84,7 +84,7 @@ h3 {
     border: black 1px solid;
     border-right: none;
     position: absolute;
-    top: 200px;
+    bottom: 350px;
     right: 0;
     transition: var(--slow-trans);
     padding: 1rem;
@@ -102,7 +102,7 @@ h3 {
     font-weight: 600;
     transition: var(--fast-trans);
     right: -5px;
-    top: 60px;
+    top: 85px;
 }
 
 .add-label {
@@ -122,19 +122,21 @@ h3 {
 
 .textarea {
     resize: none;
-    height: 40px;
+    height: 60px;
 }
 
 .add-label-button {
     width: 60px;
-    background-color: white;
-    color: grey;
+    background-color: rgb(140, 140, 140);
+    ;
+    color: white;
     font-size: .8rem;
+    border: grey 1px solid;
     cursor: pointer;
 }
 
 .add-label-button:hover {
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(110, 110, 110);
 }
 
 .label {
@@ -174,11 +176,14 @@ h3 {
 
 .close-button {
     position: absolute;
+    text-align: center;
+    font-size: 1.2rem;
+    width: 20px;
     border: 1px solid black;
     background-color: coral;
-    bottom: -30px;
-    left: -1px;
-    padding: .3rem;
+    top: -1px;
+    left: -25px;
+    padding: .1rem;
     cursor: pointer;
 }
 
