--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -102,7 +102,7 @@ h3 {
     font-weight: 600;
     transition: var(--fast-trans);
     right: -5px;
-    top: 85px;
+    top: 55px;
 }
 
 .add-label {
@@ -270,7 +270,7 @@ h3 {
 .tooltipsidebar-container {
     border-left: 1px solid black;
     border-bottom: 1px solid black;
-    height: 195px;
+    height: 450px;
     width: 250px;
     background-color: var(--filler);
     position: absolute;
@@ -279,21 +279,21 @@ h3 {
 }
 
 .tooltipsidebar-inner-container {
-    padding: .6rem;
+    padding: .5rem;
 }
 
-.tooltip-element-wrapper {
+.tooltip-element-wrapper, .node-context-element-wrapper {
     padding: .4rem;
     width: 250px;
     font-size: .8rem;
     text-align: left;
 }
 
-.tooltip-element-key {
+.tooltip-element-key, .node-context-element-wrapper {
     font-weight: bold;
 }
 
-.tooltip-element-value {
+.tooltip-element-value, .node-context-element-value {
     font-weight: lighter;
 }
 
