--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -422,6 +422,19 @@ h3 {
     cursor: pointer;
 }
 
+.label-close-button {
+    padding: .3rem;
+    background-color: coral;
+    text-align: center;
+    position: absolute;
+    width: 15px;
+    right: -26px;
+    top: -1px;
+    border: 1px solid black;
+    pointer-events: all;
+    cursor: pointer;
+}
+
 .event-select-container {
     width: 12%;
     min-width: 120px;
