--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -4,6 +4,12 @@ html, body, #root {
     margin: 0;
     font-family: sans-serif;
     box-sizing: border-box;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 div:focus {
@@ -501,4 +507,13 @@ h3 {
 
 .brush-svg {
     position: absolute;
+}
+
+.tooltip-container {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    border: 1px black solid;
+    background-color: white;
+    transition: var(--fast-trans);
 }
