--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -347,16 +347,17 @@ h3 {
 }
 
 .timestamp-container {
-    width: 210px;
-    height: 22px;
+    width: 100%;
+    height: 30px;
     position: absolute;
-    border: 1px solid black;
-    right: -1px;
-    bottom: -34px;
+    border-bottom: 3px solid grey;
+    left: 0px;
+    top: -33px;
     text-align: middle;
-    background-color: lightgrey;
-    line-height: 22px;
-    padding: .3rem;
+    background-color: lightsteelblue;
+    line-height: 28px;
+    /* padding: .3rem; */
+    z-index: 100;
 }
 
 .timestamp-font {
