--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -381,10 +381,8 @@ h3 {
     background-color: lightgrey;
 }
 
-.brush-svg-div {
-    width: 100%;
-    height: 100%;
-    position: absolute;
+.overlay {
+    pointer-events: none !important;
 }
 
 .resize {
@@ -506,10 +504,6 @@ h3 {
     top: -52px;
     height: 20px;
     color: white;
-}
-
-.brush-svg {
-    position: absolute;
 }
 
 .tooltip-container {
